// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pending messages reducer handles  actions - addMessage 1`] = `
Immutable.Map {
  "test-op-id-0": Immutable.PendingMessage {
    "opId": "test-op-id-0",
    "channelId": "test-channel-id",
    "txId": null,
    "error": null,
    "message": Immutable.Map {
      "id": "test-message-id-0",
      "type": 1,
      "createdAt": 1551963828,
      "message": "This is some message test-message-id-0",
      "spent": "23.23",
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      },
    },
    "status": "pending",
  },
  "test-op-id-1": Immutable.PendingMessage {
    "opId": "test-op-id-1",
    "channelId": "test-channel-id",
    "txId": null,
    "error": null,
    "message": Immutable.Map {
      "id": "test-message-id-1",
      "type": 1,
      "createdAt": 1551963828,
      "message": "This is some message test-message-id-1",
      "spent": "23.23",
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      },
    },
    "status": "pending",
  },
}
`;

exports[`Pending messages reducer handles  actions - removeMessage 1`] = `
Immutable.Map {
  "test-op-id-0": Immutable.PendingMessage {
    "opId": "test-op-id-0",
    "channelId": "test-channel-id",
    "txId": null,
    "error": null,
    "message": Immutable.Map {
      "id": "test-message-id-0",
      "type": 1,
      "createdAt": 1551963828,
      "message": "This is some message test-message-id-0",
      "spent": "23.23",
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      },
    },
    "status": "pending",
  },
}
`;

exports[`Pending messages reducer handles  actions - removeMessage by txId 1`] = `
Immutable.Map {
  "test-op-id-0": Immutable.PendingMessage {
    "opId": "test-op-id-0",
    "channelId": "test-channel-id",
    "txId": null,
    "error": null,
    "message": Immutable.Map {
      "id": "test-message-id-0",
      "type": 1,
      "createdAt": 1551963828,
      "message": "This is some message test-message-id-0",
      "spent": "23.23",
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      },
    },
    "status": "pending",
  },
}
`;

exports[`Pending messages reducer handles  actions - resolveMessage - when error 1`] = `
Immutable.Map {
  "test-op-id-0": Immutable.PendingMessage {
    "opId": "test-op-id-0",
    "channelId": "test-channel-id",
    "txId": null,
    "error": null,
    "message": Immutable.Map {
      "id": "test-message-id-0",
      "type": 1,
      "createdAt": 1551963828,
      "message": "This is some message test-message-id-0",
      "spent": "23.23",
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      },
    },
    "status": "pending",
  },
  "test-op-id-1": Immutable.PendingMessage {
    "opId": "test-op-id-1",
    "channelId": "test-channel-id",
    "txId": null,
    "error": Immutable.ZcashError {
      "code": -4,
      "message": "Some error",
    },
    "message": Immutable.Map {
      "id": "test-message-id-1",
      "type": 1,
      "createdAt": 1551963828,
      "message": "This is some message test-message-id-1",
      "spent": "23.23",
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      },
    },
    "status": "failed",
  },
}
`;

exports[`Pending messages reducer handles  actions - resolveMessage - when success 1`] = `
Immutable.Map {
  "test-op-id-0": Immutable.PendingMessage {
    "opId": "test-op-id-0",
    "channelId": "test-channel-id",
    "txId": null,
    "error": null,
    "message": Immutable.Map {
      "id": "test-message-id-0",
      "type": 1,
      "createdAt": 1551963828,
      "message": "This is some message test-message-id-0",
      "spent": "23.23",
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      },
    },
    "status": "pending",
  },
  "test-op-id-1": Immutable.PendingMessage {
    "opId": "test-op-id-1",
    "channelId": "test-channel-id",
    "txId": "test-tx-id",
    "error": null,
    "message": Immutable.Map {
      "id": "test-message-id-1",
      "type": 1,
      "createdAt": 1551963828,
      "message": "This is some message test-message-id-1",
      "spent": "23.23",
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      },
    },
    "status": "success",
  },
}
`;

exports[`Pending messages reducer handles  actions epics - observeMessage creates and resolves message on finish 1`] = `
Immutable.Map {
  "test-op-id-1": Immutable.PendingMessage {
    "opId": "test-op-id-1",
    "channelId": "test-channel-id",
    "txId": "test-tx-id",
    "error": Immutable.ZcashError {
      "code": -1,
      "message": "no error",
    },
    "message": Immutable.Map {
      "id": "test-message-id-1",
      "type": 1,
      "createdAt": 1551963828,
      "message": "This is some message test-message-id-1",
      "spent": "23.23",
      "sender": Immutable.Map {
        "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      },
    },
    "status": "success",
  },
}
`;

exports[`Pending messages reducer handles  actions epics - observeMessage polls when no finished 1`] = `
Array [
  Array [
    [Function],
    15000,
  ],
]
`;
